--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -106,7 +106,7 @@
                 <div class="dropdown navbar-form navbar-left ">
                     <button class="btn btn-default dropdown-toggle" style="width:110px" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                     <span id="dropdownLabel">
-		    Line Chart
+		    River Chart
                     </span>
 		    <span class="caret"></span>
 		  </button>
@@ -117,6 +117,29 @@
 		</div>
 
                 <div class="navbar-form navbar-left">
+
+                <div class="dropdown navbar-form navbar-left btn-group ">
+                    <button class="btn btn-default dropdown-toggle" style="width:110px" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <span id="dropdownLabel">
+		    River Chart
+                    </span>
+		    <span class="caret"></span>
+		  </button>
+		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+		    <li><a class="btn-chart-type" targ="line"  href="#">Line Chart</a></li>
+		    <li><a class="btn-chart-type" targ="river" href="#">River Chart</a></li>
+		  </ul>
+		</div>
+
+
+                    <div class="checkbox btn-group">
+                         <label>
+                           <input id="chkKw" type="checkbox" checked="true"> Author Keywords
+                         </label>
+                         <label>
+                           <input id="chkAb" type="checkbox"> Abstract
+                         </label>
+                    </div>
                     <div class="btn-group">
                         <input id="inpt-inpage-search" class="form-control" placeholder="Search">
                     </div>
