--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -111,28 +111,13 @@
 		    <span class="caret"></span>
 		  </button>
 		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-		    <li><a class="btn-chart-type" targ="line"  href="#">Line Chart</a></li>
 		    <li><a class="btn-chart-type" targ="river" href="#">River Chart</a></li>
+		    <li><a class="btn-chart-type" targ="line"  href="#">Line Chart</a></li>
 		  </ul>
 		</div>
 
                 <div class="navbar-form navbar-left">
-
-                <div class="dropdown navbar-form navbar-left btn-group ">
-                    <button class="btn btn-default dropdown-toggle" style="width:110px" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <span id="dropdownLabel">
-		    River Chart
-                    </span>
-		    <span class="caret"></span>
-		  </button>
-		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-		    <li><a class="btn-chart-type" targ="line"  href="#">Line Chart</a></li>
-		    <li><a class="btn-chart-type" targ="river" href="#">River Chart</a></li>
-		  </ul>
-		</div>
-
-
-                    <div class="checkbox btn-group">
+                    <div id="chkbox" class="checkbox btn-group">
                          <label>
                            <input id="chkKw" type="checkbox" checked="true"> Author Keywords
                          </label>
