fix river chart

--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -163,6 +163,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="{% static 'js/vischart.js' %}"></script>
 <script src="{% static 'js/heatchart.js' %}"></script>
+<script src="{% static 'js/riverchart.js' %}"></script>
 <script src="{% static 'js/mjs.js' %}"></script>
 
 </html>
