click hide usage

--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -167,7 +167,7 @@
                             supports only single keyword, while the results are grouped to four conferences: VIS, InfoVIS, SciVIS, VAST</li>
                     </ul>
             </ul>
-            <i>
+            <i id="dvUsageClick">
             click to hide
             </i>
 
