fix bug on phrase search

--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -162,9 +162,9 @@
                 <li><b>Group By:</b> the group mode:  
                     <ul>
                         <li><b>Multiple Words</b> 
-                            supports mutiple keywords when search,  seperated by ','. For exapmple, search 'lighting, spatial selection, texture, material'</li>
+                            supports mutiple keywords (phrases) when search,  seperated by ','. For exapmple, search 'lighting, spatial selection, texture, material'</li>
                         <li><b>Conferences</b> 
-                            supports only single keyword, while the results are grouped to four conferences: VIS, InfoVIS, SciVIS, VAST</li>
+                            supports only single keyword (phrase), while the results are grouped to four conferences: VIS, InfoVIS, SciVIS, VAST</li>
                     </ul>
             </ul>
             <i id="dvUsageClick">
