--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -167,8 +167,8 @@
                             supports only single keyword (phrase), while the results are grouped to four conferences: VIS, InfoVIS, SciVIS, VAST</li>
                     </ul>
             </ul>
-            <i id="dvUsageClick">
-            click to hide
+            <i id="dvUsageClick" style="cursor: pointer">
+                dismiss
             </i>
 
         </div> 
@@ -187,6 +187,7 @@
     
 
 <script src="{% static 'js/vender/d3.v4.min.js' %}"></script>
+<script src="{% static 'js/vender/d3.layout.cloud.js' %}"></script>
 <script src="{% static 'js/vender/jquery-3.1.1.min.js' %}"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
@@ -196,6 +197,7 @@
 <script src="{% static 'js/vischart.js' %}"></script>
 <script src="{% static 'js/heatchart.js' %}"></script>
 <script src="{% static 'js/riverchart.js' %}"></script>
+<script src="{% static 'js/textcloud.js' %}"></script>
 <script src="{% static 'js/mjs.js' %}"></script>
 
 <script>
