text cloud search

--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -55,7 +55,8 @@
         }
         #lineChart,
         #riverChart,
-        #heatChart
+        #heatChart,
+        #cloudChart
         {
             position: fixed;
             left: 0px;
@@ -177,6 +178,7 @@
         <div class="dvChart" id="lineChart"></div>
         <div class="dvChart" id="riverChart"></div>
         <div class="dvChart" id="heatChart"></div>
+        <div class="dvChart" id="cloudChart" style="padding-top:30px"></div>
 
    </div>
 
