--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -9,14 +9,9 @@
 
 
     <style>
-
         .form-control:focus {
             border: 1px #222087 solid;
             border-radius: 0px;
-/*
-    box-shadow: 0 0px 0px #222087 inset, 0 0 10px #d7d7d7;
-    outline: 0 none;
-*/
         }
         
         body{
@@ -40,10 +35,9 @@
         }
         #searchList {
             border-top:3px solid #DDDDDD;
-            overflow-y: scroll;
-            margin-top:44%;
+            overflow-y: auto;
+            top:80%;
             position:absolute;
-            background-color:white;
             max-height:100%;
             width:100%;
             padding:30px;
@@ -63,6 +57,7 @@
             right: 0px;
             top: 50px;
             bottom: 0px;
+            height:70%;
         }
 
         #dvUsage
