--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -1,179 +1,180 @@
 <html>
 <head>
 
-    {% load static %}
-    {% block head %}
-      <link href="{% static 'css/enhance.css' %}" rel="stylesheet">
-      <link href="{% static 'css/vender/bootstrap.min.css' %}" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    {% endblock head %}
+  {% load static %}
+  {% block head %}
+    <link href="{% static 'css/enhance.css' %}" rel="stylesheet">
+    <link href="{% static 'css/vender/bootstrap.min.css' %}" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  {% endblock head %}
 
 
-    <style>
-        .form-control:focus {
-            border: 1px #222087 solid;
-            border-radius: 0px;
-        }
-        
-        body{
-            background-color: #F2F2F2;
-        }
-        div {
-            border: 0px solid black
-        }
-        em {
-            font-weight: bold
-        }
-        #footer {
-            z-index: 400;
-            top: 95%;
-        }
-        #container {
-            bottom: 0;
-            left: 0;
-            right: 0;
-            position: absolute;
-        }
-        #searchList {
-            border-top:3px solid #DDDDDD;
-            overflow-y: auto;
-            top:80%;
-            position:absolute;
-            max-height:100%;
-            width:100%;
-            padding:30px;
-            background-color: #F0F0F0;
-            z-index:22;
-        }
-        li a {
-            cursor: pointer;
-        }
-        #lineChart,
-        #riverChart,
-        #heatChart,
-        #cloudChart
-        {
-            position: fixed;
-            left: 0px;
-            right: 0px;
-            top: 50px;
-            bottom: 0px;
-            height:70%;
-        }
+  <style>
+    .form-control:focus {
+      border: 1px #222087 solid;
+      border-radius: 0px;
+    }
+    
+    body{
+      background-color: #F2F2F2;
+    }
+    div {
+      border: 0px solid black
+    }
+    em {
+      font-weight: bold
+    }
+    #footer {
+      z-index: 400;
+      top: 95%;
+    }
+    #container {
+      bottom: 0;
+      left: 0;
+      right: 0;
+      position: absolute;
+    }
+    #searchList {
+      border-top:3px solid #DDDDDD;
+      overflow-y: auto;
+      top:80%;
+      position:absolute;
+      max-height:100%;
+      width:100%;
+      padding:30px;
+      background-color: #F0F0F0;
+      z-index:22;
+    }
+    li a {
+      cursor: pointer;
+    }
+    #lineChart,
+    #riverChart,
+    #heatChart,
+    #cloudChart
+    {
+      position: fixed;
+      left: 0px;
+      right: 0px;
+      top: 50px;
+      bottom: 0px;
+      height:70%;
+    }
 
-        #dvUsage
-        {
-            position: fixed;
-            padding:100px;
-            background-color: rgba(240,240,240,0.5);
-            z-index:22;
-        }
+    #dvUsage
+    {
+      position: fixed;
+      padding:100px;
+      background-color: rgba(240,240,240,0.5);
+      z-index:22;
+    }
 
-    </style>
+  </style>
 
 </head>
 
 <body>
-    <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Preparing data...</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" style="width: 100%">
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Preparing data...</h4>
         </div>
-    </div>
-
-    <div id="errorModal" tabindex="-1">
-        <p id="errorModalP">
-            Cannot fulfill this request..
-        </p>
-    </div>
-
-    <nav class="navbar navbar-default navbar-static-top">
-        <div class="container-fluid">
-            <div class="navbar-header" id="dvHeader">
-                <!--
-                <a class="navbar-brand" href="#">VISearch</a>
-                <div id="beta">
-                -->
-                </div>
+        <div class="modal-body">
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped active" style="width: 100%">
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-            <div class="collapse navbar-collapse">
+  <div id="errorModal" tabindex="-1">
+    <p id="errorModalP">
+      Cannot fulfill this request..
+    </p>
+  </div>
 
-                {% for options in navOptions%}
-                <div class="dropdown navbar-form navbar-left ">
-                    <span class="olabel" targ="{{options.label}}">
-                        {{options.label}}:
-                    </span>
-                    <button class="btn btn-default dropdown-toggle" style="" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <span class="dropdownLabel">
-                        {{options.options.0}}
-                    </span>
-		    <span class="caret"></span>
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container-fluid">
+      <div class="navbar-header" id="dvHeader">
+        <!--
+        <a class="navbar-brand" href="#">VISearch</a>
+        <div id="beta">
+        -->
+        </div>
+      </div>
+
+      <div class="collapse navbar-collapse">
+
+        {% for options in navOptions%}
+        <div class="dropdown navbar-form navbar-left ">
+          <span class="olabel" targ="{{options.label}}">
+            {{options.label}}:
+          </span>
+          <button class="btn btn-default dropdown-toggle" style="" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <span class="dropdownLabel">
+            {{options.options.0}}
+          </span>
+		  <span class="caret"></span>
 		  </button>
 		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    {% for o in options.options%}
-                    <li><a class="btn-option" targ="" href="#">{{o}}</a></li>
-                    {% endfor %}
+          {% for o in options.options%}
+          <li><a class="btn-option" targ="" href="#">{{o}}</a></li>
+          {% endfor %}
 		  </ul>
 		</div>
-                {% endfor %}
+        {% endfor %}
 
-                <div class="navbar-form navbar-left">
-                   <div class="input-group">
-                        <input id="inpt-search" class="form-control" placeholder="Search">
-                        <span class="input-group-btn">
-                            <button id="btn-search" class="btn btn-default">&nbsp;<span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                            <button id="btn-usage" class="btn btn-default">&nbsp;<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></button>
-                        </span>
-                    </div>
-                </div>
-
-            </div>
-            <!-- /.navbar-collapse -->
+        <div class="navbar-form navbar-left">
+           <div class="input-group">
+            <input id="inpt-search" class="form-control" placeholder="Search">
+            <span class="input-group-btn">
+              <button id="btn-search" class="btn btn-default">&nbsp;<span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+              <button id="btn-back" class="btn btn-default">&nbsp;<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>
+              <button id="btn-usage" class="btn btn-default">&nbsp;<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></button>
+            </span>
+          </div>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
 
-        <div id="dvUsage">
-            
-            <h3>Usage</h3>
-            <ul>
-                <li><b>Chart Type:</b> support river chart and heat chart</li>
-                <li><b>Search From:</b> where should the searching words appear: in Author Keywords or Abstract & Title </li>
-                <li> <b>Criterion:</b> the aggregate criterion:  
-                    <ul>
-                        <li><b>Frequency</b> counts the how many papers in the database that contain the search word(s) in 'search from' option.
-                        <li><b>Cited Times</b> count the how many times the papers are cited that contain the search word(s) in 'search from' option 
-                      </li>
-                    </ul>
-                </li>
-                <li><b>Group By:</b> the group mode:  
-                    <ul>
-                        <li><b>Multiple Words</b> 
-                            supports mutiple keywords (phrases) when search,  seperated by ','. For exapmple, search 'lighting, spatial selection, texture, material'</li>
-                        <li><b>Conferences</b> 
-                            supports only single keyword (phrase), while the results are grouped to four conferences: VIS, InfoVIS, SciVIS, VAST</li>
-                    </ul>
-            </ul>
-            <i id="dvUsageClick" style="cursor: pointer">
-                dismiss
-            </i>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
 
-        </div> 
+    <div id="dvUsage">
+      
+      <h3>Usage</h3>
+      <ul>
+        <li><b>Chart Type:</b> support river chart and heat chart</li>
+        <li><b>Search From:</b> where should the searching words appear: in Author Keywords or Abstract & Title </li>
+        <li> <b>Criterion:</b> the aggregate criterion:  
+          <ul>
+            <li><b>Frequency</b> counts the how many papers in the database that contain the search word(s) in 'search from' option.
+            <li><b>Cited Times</b> count the how many times the papers are cited that contain the search word(s) in 'search from' option 
+            </li>
+          </ul>
+        </li>
+        <li><b>Group By:</b> the group mode:  
+          <ul>
+            <li><b>Multiple Words</b> 
+              supports mutiple keywords (phrases) when search,  seperated by ','. For exapmple, search 'lighting, spatial selection, texture, material'</li>
+            <li><b>Conferences</b> 
+              supports only single keyword (phrase), while the results are grouped to four conferences: VIS, InfoVIS, SciVIS, VAST</li>
+          </ul>
+      </ul>
+      <i id="dvUsageClick" style="cursor: pointer">
+        dismiss
+      </i>
 
-    <div id="container">
-        <div class="dvChart" id="lineChart"></div>
-        <div class="dvChart" id="riverChart"></div>
-        <div class="dvChart" id="heatChart"></div>
-        <div class="dvChart" id="cloudChart" style="padding-top:30px"></div>
+    </div> 
+
+  <div id="container">
+    <div class="dvChart" id="lineChart"></div>
+    <div class="dvChart" id="riverChart"></div>
+    <div class="dvChart" id="heatChart"></div>
+    <div class="dvChart" id="cloudChart" style="padding-top:30px"></div>
 
    </div>
 
@@ -181,16 +182,16 @@
    </div>
 
 </body>
-    
+  
 
 <script src="{% static 'js/vender/d3.v4.min.js' %}"></script>
 <script src="{% static 'js/vender/d3.layout.cloud.js' %}"></script>
 <script src="{% static 'js/vender/jquery-3.1.1.min.js' %}"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous"></script>
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
 <script src="{% static 'js/vender/bootstrap.min.js' %}"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
-    crossorigin="anonymous"></script>
+  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+  crossorigin="anonymous"></script>
 <script src="{% static 'js/vischart.js' %}"></script>
 <script src="{% static 'js/heatchart.js' %}"></script>
 <script src="{% static 'js/riverchart.js' %}"></script>
