--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -113,7 +113,7 @@
             {{options.label}}:
           </span>
           <button class="btn btn-default dropdown-toggle" style="" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          <span class="dropdownLabel">
+          <span class="dropdownLabel" targ="{{options.label}}">
             {{options.options.0}}
           </span>
 		  <span class="caret"></span>
