--- a/vis/templates/index/index.html
+++ b/vis/templates/index/index.html
@@ -144,6 +144,8 @@
   </nav>
 
     <div id="dvUsage">
+      <h3>Get Started</h3>
+        Just click the <span class="glyphicon glyphicon-search" aria-hidden="true"></span> button on the top right!
       
       <h3>Usage</h3>
       <ul>
